force-app/main/default/objects/Site_Score__c/Site_Score__c.object-meta.xml
<CustomObject>
    <description>Scoring output per site</description>
    <label>Site Score</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Site Score ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>