force-app/main/default/objects/Site_Score__c/fields/Agent_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Agent_Recommendation__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Free-text rationale and recommendation generated by Agentforce</inlineHelpText>
    <label>Agent Recommendation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>