force-app/main/default/objects/Site_Score__c/fields/Agent_Version__c.field-meta.xml
<CustomField>
    <fullName>Agent_Version__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Version of the Agentforce scoring model used; supports audit and reproducibility</inlineHelpText>
    <label>Agent Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>