force-app/main/default/objects/Site_Score__c/fields/Blind_Spot_Flag__c.field-meta.xml
<CustomField>
    <fullName>Blind_Spot_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>True when Demand Score &gt; 70 AND Competition Level = Low; marks high-opportunity gaps</inlineHelpText>
    <label>Blind Spot Flag</label>
    <type>Checkbox</type>
</CustomField>