force-app/main/default/objects/Site_Score__c/fields/Blind_Spot_Formula__c.field-meta.xml
<CustomField>
    <fullName>Blind_Spot_Formula__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <formula>AND(
  Demand_Score__c &gt;= 70,
  ISPICKVAL(Competition_Level__c, &quot;Low&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blind Spot Formula</label>
    <type>Checkbox</type>
</CustomField>