force-app/main/default/objects/Site_Score__c/fields/Competition_Level__c.field-meta.xml
<CustomField>
    <fullName>Competition_Level__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Categorized competition density around the site; set by Agentforce</inlineHelpText>
    <label>Competition Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Unassessed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>