force-app/main/default/objects/Site_Score__c/fields/Competitor_Density__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Density__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Count of competitors within configurable radius normalized to 0–100</inlineHelpText>
    <label>Competitor Density</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>