force-app/main/default/objects/Site_Score__c/fields/Demand_Score__c.field-meta.xml
<CustomField>
    <fullName>Demand_Score__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>AI-generated demand score 0–100 from Agentforce; composite of footfall, demographic, and sales signals</inlineHelpText>
    <label>Demand Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>