force-app/main/default/objects/Site_Score__c/fields/Demographic_Index__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Index__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Composite score from income bracket, age index, and population density</inlineHelpText>
    <label>Demographic Index</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>