force-app/main/default/objects/Site_Score__c/fields/Footfall_Index__c.field-meta.xml
<CustomField>
    <fullName>Footfall_Index__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Normalized daily footfall score (0–100) derived from FootfallRecord aggregate</inlineHelpText>
    <label>Footfall Index</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>