force-app/main/default/objects/Site_Score__c/fields/Overall_Rank__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rank__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Site rank among all sites scored in the same evaluation batch</inlineHelpText>
    <label>Overall Rank</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>