force-app/main/default/objects/Site_Score__c/fields/Potential_Site__c.field-meta.xml
<CustomField>
    <fullName>Potential_Site__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Master-detail to Potential Site; scorecard is deleted with the site</inlineHelpText>
    <label>Potential Site</label>
    <referenceTo>Potential_Site__c</referenceTo>
    <relationshipLabel>Site Scores</relationshipLabel>
    <relationshipName>Site_Scores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>