force-app/main/default/objects/Site_Score__c/fields/Score_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Score_Confidence__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Agent confidence percentage in the demand score based on data completeness</inlineHelpText>
    <label>Score Confidence</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>