force-app/main/default/objects/Site_Score__c/fields/Scored_Date__c.field-meta.xml
<CustomField>
    <fullName>Scored_Date__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Timestamp when Agentforce completed scoring</inlineHelpText>
    <label>Scored Date</label>
    <type>DateTime</type>
</CustomField>