force-app/main/default/objects/Site_Score__c/fields/Site_Quality_Tier__c.field-meta.xml
<CustomField>
    <fullName>Site_Quality_Tier__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <formula>IF(
    Demand_Score__c &gt;= 80, &quot;Prime&quot;,
    IF(
        Demand_Score__c &gt;= 60, &quot;Viable&quot;,
        IF(
            Demand_Score__c &gt;= 40, &quot;Marginal&quot;,
            &quot;Poor&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Quality Tier</label>
    <type>Text</type>
</CustomField>