force-app/main/default/objects/Site_Score__c/validationRules/Score_Range_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Score_Range_Check</fullName>
    <active>true</active>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Demand_Score__c)), OR(Demand_Score__c &lt; 0, Demand_Score__c &gt; 100))</errorConditionFormula>
    <errorMessage>Demand Score must be between 0 and 100.</errorMessage>
</ValidationRule>